--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,16 @@
 
   
   <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css2" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css3" media="screen">
+
 
 </head>
 
 <body>
 
   
-    <nav class="navbar navbar-expand-lg navbar-inverse navbar-static-top affix" id="nav">
+    <nav class="navbar navbar-expand-lg navbar-inverse navbar-static-bottom affix" id="nav">
     <div class="container">
       
       <div class="navbar-header">
@@ -95,18 +98,15 @@
     </section>
   </main>
  
-  <footer class="footer">
+  <nav class="navbar sticky-bottom navbar-dark bg-primary">
+      <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
       Christie Harwell
     </p>
   </footer>
- 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script></script>
-
+</nav>
+  
 </body>
 
 </html>
