--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css2" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css3" media="screen">
 
 </head>
 
-  <body>
-  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-inverse navbar-static-bottom affix" id="nav">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html" id="logo">Christie Harwell</a>
@@ -29,19 +31,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <div class= "contact" "collapse navbar-collapse" id="page-nav-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a class="nav-link" href="contact.html"><p>Contact</p></a>
-              </li>
-              <li>
-                <a class="nav-link" href="portfolio.html"><p>Portfolio</p></a>
-              </li>
-              <li>
-                <a class="nav-link" href="index.html"><p>About</p></a>
-              </li>
-            </ul>
-          </div>
+
+      <div class= "contact" "collapse navbar-collapse" id="page-nav-collapse">
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a class="nav-link" href="contact.html"><p>Contact</p></a>
+          </li>
+          <li>
+            <a class="nav-link" href="portfolio.html"><p>Portfolio</p></a>
+          </li>
+          <li>
+            <a class="nav-link" href="index.html"><p>About</p></a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
   
@@ -79,12 +82,14 @@
     </section>
   </main>
 
+  <nav class="navbar sticky-bottom navbar-dark bg-primary">
   <footer class="footer">
     <div class="two-toned-footer-color"></div>
     <p class="text-muted text-muted-footer text-center">
       Christie Harwell
     </p>
   </footer>
+  </nav>
   
  
 </body>
