--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,16 @@
   <title>Christie Harwell Portfolio</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+
+    <link rel="stylesheet" href="assets/css/styles.css" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css2" media="screen">
+  <link rel="stylesheet" href="assets/css/styles.css3" media="screen">
+
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-inverse navbar-static-bottom affix" id="nav">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand" href="index.html" id="logo">Christie Harwell</a>
@@ -27,7 +31,6 @@
           <span class="icon-bar"></span>
         </button>
 
-        
       <div class= "contact" "collapse navbar-collapse" id="page-nav-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
@@ -102,10 +105,6 @@
           </p>
     </footer>
   </nav>
-
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script></script>
 
 </body>
 
