--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <div class="container">
       
       <div class="navbar-header">
-        <a class="navbar-brand" href="index.html" id="logo">Your Name</a>
+        <a class="navbar-brand" href="index.html" id="logo">Christie Harwell</a>
       </div>
       <button type="button" class="navbar-toggler collapsed ml-auto" data-toggle="collapse" data-target="#page-nav-collapse" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
