week10 HW added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,30 +52,44 @@
           <hr />
           <div class="row">
             <div class="col-sm-6 col-md-12 col-lg-6">
-                <a href= https://cholvie.github.io/Psychic-Game>
+              <a href= https://cholvie.github.io/Psychic-Game>
+                <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+              </a>
+            </div>
+
+            <div class="col-sm-6 col-md-12 col-lg-6">
+              <a href= https://cholvie.github.io/week-4-game/>
+                <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+              </a>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6 col-md-12 col-lg-6">
+                <a href= https://cholvie.github.io/Firebase-Train-Scheduler-HW/>
                   <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
                 </a>
-            </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
-            </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-12 col-lg-6">
-              <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
-            </div>
-            <div class="col-sm-6 col-md-12 col-lg-6">
+              </div>
+
+              <div class="col-sm-6 col-md-12 col-lg-6">
+                <a href= https://cholvie.github.io/TriviaGame/>
                 <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
-             </div>
+                </a>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-sm-6 col-md-12 col-lg-6">
+                <a href= https://cholvie.github.io/liri-node-app/>
+                <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+                </a>
+              </div>
+
+              <div class="col-sm-6 col-md-12 col-lg-6">
+                  <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+              </div>
+            </div>
           </div>
+
         </article>
       </div>
       <div class="col-md-4">
@@ -108,3 +122,4 @@
 </body>
 
 </html>
+
