--- a/portfolio.html
+++ b/portfolio.html
@@ -85,6 +85,7 @@
               </div>
 
               <div class="col-sm-6 col-md-12 col-lg-6">
+                <a href= https://cholvie.github.io/Bamazon/>
                   <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
               </div>
             </div>
