--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,18 @@
                   <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
               </div>
             </div>
+
+            <div class="row">
+              <div class="col-sm-6 col-md-12 col-lg-6">
+                <a href= https://cholvie.github.io/FriendFinder/>
+                <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+                </a>
+              </div>
+
+              <div class="col-sm-6 col-md-12 col-lg-6">                
+                  <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
+              </div>
+            </div>
           </div>
 
         </article>
