--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,8 @@
                 </a>
               </div>
 
-              <div class="col-sm-6 col-md-12 col-lg-6">                
+              <div class="col-sm-6 col-md-12 col-lg-6">   
+                <a href= https://cholvie.github.io/burger/>             
                   <img class="img-fluid port-image" src="assets\images\profilePicture.jpg" alt="">
               </div>
             </div>
